
PIG-2151: Add annotation to specify output schema in Java UDFs (dvryaboy)

PIG-2230: Improved error message for invalid parameter format (xuitingz via olgan)

PIG-2328: Add builtin UDFs for building and using bloom filters (gates)

PIG-2338: Need signature for EvalFunc (daijy)

PIG-2337: Provide UDF with input schema (xutingz via daijy)

OPTIMIZATIONS

BUG FIXES

PIG-2532: Registered classes fail deserialization in frontend (traviscrawford via julien)

PIG-2549: org.apache.pig.piggybank.storage.avro - Broken documentation link for AvroStorage (chrisas via daijy)

PIG-2322: varargs functions do not get passed the arguments in Python embedding (julien)

PIG-2491: Pig docs still mention hadoop-site.xml (daijy)

PIG-2504: Incorrect sample provided for REGEX_EXTRACT (prkommireddi via daijy)

PIG-2502: Make "hcat.bin" configurable in e2e test (daijy)

PIG-2501: Changes needed to contrib/piggybank/java/build.xml in order to build piggybank.jar with Hadoop 0.23 
(ekoontz via daijy)

PIG-2499: Pig TestGrunt.testShellCommand occasionally fails (tomwhite via daijy)

PIG-2326: Pig minicluster tests can not be run from eclipse (julienledem via daijy)

PIG-2432: Eclipse .classpath file is out of date (gates)

PIG-2427: getSchemaFromString throws away the name of the tuple that is in a bag (jcoveney via dvryaboy)

PIG-2425: Aggregate Warning does not work as expected on Embedding Pig in Java 0.9.1 (prkommireddi via thejas)

PIG-2384: Generic Invokers should use PigContext to resolve classes (dvryaboy)

PIG-2379: Bug in Schema.getPigSchema(ResourceSchema rSchema) improperly adds two level access (jcoveney via dvryaboy)

PIG-2355: ant clean does not clean e2e test build artifacts (daijy)

PIG-2352: e2e test harness' use of environment variables causes unintended effects between tests (gates)

Release 0.10.0 - Unreleased

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-2518: Add ability to clean ivy cache in build.xml (daijy)
