@@ -102,6 +102,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-2514: REGEX_EXTRACT not returning correct group with non greedy regex (romainr via daijy)
+
 PIG-2532: Registered classes fail deserialization in frontend (traviscrawford via julien)
 
 PIG-2549: org.apache.pig.piggybank.storage.avro - Broken documentation link for AvroStorage (chrisas via daijy)
